Fixed overflow on iOS

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -137,16 +137,6 @@ ul {
   margin-right: auto;
 }
 
-// SWIPER
-
-.swiper-container, .swiper-wrapper, .swiper-slide, .no-swiper-container {
-  height: inherit !important;
-}
-
-.swiper-container {
-  margin-bottom: -@footer-height;
-}
-
 // COMMON LAYOUT TRICKS
 
 .left-of-three {
