--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -100,6 +100,16 @@ nav#footer {
   }
 }
 
+// SWIPER
+
+.swiper-container, .swiper-wrapper, .swiper-slide, .no-swiper-container {
+  height: inherit !important;
+}
+
+.swiper-container {
+  margin-bottom: -@footer-height;
+}
+
 // RESPONSIVE
 
 // We want to horizontally and vertically center everything
