--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -17,6 +17,7 @@ html {
   overflow: hidden;
   body, div[role=main], .no-slides-container, .slides-container, section.one-column-grid, section.two-columns-grid, .column {
     height: inherit;
+    overflow: hidden;
   }
   font-size: @default-font-size;
 }
